--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</ul>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="objective.png" alt="">
+				<img src="objective.png"  class="img-fluid" alt="">
 				<div class="carousel-caption">
 					<button type="button" class="btn btn-outline-light btn-lg">
 						IfP 2020
