--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 			<div class="carousel-item active">
 				<img src="objective.png"  class="img-fluid" alt="">
 				<div class="carousel-caption">
+	
 					<button type="button" class="btn btn-outline-light btn-lg">
-						IfP 2020
+						IfP Myanmar 2020
 					</button>
-					<button type="button" class="btn btn-primary btn-lg">
-						History
+					<button type="button" class="btn btn-outline-light btn-lg">
+						IfP Myanmar Activities
 					</button>
 				</div>
 			</div>
@@ -86,7 +87,7 @@
 	<div class="container-fluid padding">
 		<div class="row welcome text-center">
 			<div class="col-12">
-				<h1 class="display-3">
+				<h1 class="display-4">
 					Hello Peacebuilders
 				</h1>
 				<h2 class="display-4"> 
@@ -101,6 +102,9 @@
 	<!--two column section-->
 	<div class="container-fluid padding">
 		<div class="row padding">
+			<div class="col-lg-6">
+				<img src="cover.jpg" class="img-fluid" alt="">
+			</div>
 			<div class="col-lg-6">
 				<h2>IfP Myanmar Background</h2>
 				<p align="justify" style="line-height: 2em; font-family: arial;">IFP Myanmar is an international conference founded by UWC (United world College)
@@ -118,9 +122,7 @@ May 16th in Yangon or outside of Yangon.</p>
 				<br>
 				
 			</div>
-			<div class="col-lg-6">
-				<img src="cover.jpg" class="img-fluid" alt="">
-			</div>
+			
 		</div>
 	</div>
 	<hr class="my-4">
@@ -174,5 +176,50 @@ empowered and undifferentiated.</p>
 			</div>
 		</div>
 	</div>
+
+	<!--connect-->
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-12">
+				<h2>Connect at</h2>
+			</div>
+			<div class="col-12 social padding">
+				<a href="#"><i class="fab fa-facebook"></i></a>
+				<a href="#"><i class="fab fa-google-plus"></i></a>
+			</div>
+		</div>
+	</div>
+
+	<!--footer-->
+	<footer>
+		<div class="container-fluid padding">
+			<div class="row text-center">
+				<div class="col-md-6">
+					<img src="IFP.png" class="logo" alt="">
+					<hr class="light">
+					<p>11111111</p>
+					<p>kaungmyart@</p>
+					<p>South Okkalao\pa</p>
+					<p>Yangon</p>
+				</div>
+
+				
+				<div class="col-md-6"><br>
+					<hr class="light">
+					<h1 style="color:#000;">
+						IfP International
+					</h1>
+					<hr class="light">
+					<h4 style="color:#09153b;">IfP Cambodia</h4>
+					<h4 style="color:#09153b;">IfP Myanmar</h4>
+					<h4 style="color:#09153b;">IfP Maesot</h4>
+				</div>
+				<div class="col-12">
+					<hr class="light-100">
+					<h5>&copy;All Rights Reserved 2019</h5>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
