--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@ empowered and undifferentiated.</p>
 				
 				<div class="col-md-6"><br>
 					<hr class="light">
-					<h1 style="color:#000;">
+					<h1 style="color:white;">
 						IfP International
 					</h1>
 					<hr class="light">
-					<h4 style="color:#09153b;">IfP Cambodia</h4>
-					<h4 style="color:#09153b;">IfP Myanmar</h4>
-					<h4 style="color:#09153b;">IfP Maesot</h4>
+					<p style="color:white;">IfP Cambodia</p>
+					<p style="color:white;">IfP Myanmar</p>
+					<p style="color:white;">IfP Maesot</p>
 				</div>
 				<div class="col-12">
 					<hr class="light-100">
