--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 					</button>
 				</div>
 			</div>
-			<div class="carousel-item img-fluid">
-				<img src="48275471_406411333230231_3230068685108412416_o.jpg" width="900px" alt="">
+			<div class="carousel-item">
+				<img src="48275471_406411333230231_3230068685108412416_o.jpg"  class="img-fluid" alt="">
 				<div class="carousel-caption">
 	
 					<button type="button" class="btn btn-outline-light btn-lg">
@@ -77,7 +77,7 @@
 				</div>
 			</div>
 			<div class="carousel-item img-fluid">
-				<img src="47261115_402670643604300_1500552648556806144_o.jpg" width="900px" alt="">
+				<img src="47261115_402670643604300_1500552648556806144_o.jpg"  class="img-fluid" alt="">
 				<div class="carousel-caption">
 	
 					<button type="button" class="btn btn-outline-light btn-lg">
